--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,9 @@ unbind C-b
 bind C-a send-prefix
 bind C-A send-prefix
 
+# Pass keys like control tab
+set-option -gw xterm-keys on
+
 # Quick pane cycling
 unbind ^A
 bind ^A select-pane -t :.+
@@ -29,11 +32,12 @@ setw -g mode-keys vi
 set-option -g set-clipboard on
 setw -g mouse on
 setw -g monitor-activity on
-# move x clipboard into tmux paste buffer
-bind C-p run "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer"
-# move tmux copy buffer into x clipboard
-bind C-y run "tmux show-buffer | xclip -i"
-# Double LMB Select & Copy (Word)
+# # move x clipboard into tmux paste buffer
+# bind C-p run "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer"
+# # move tmux copy buffer into x clipboard
+# bind C-y run "tmux save-buffer - | xclip -i"# Double LMB Select & Copy (Word)
+# bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
+
 bind-key -T copy-mode-vi DoubleClick1Pane \
     select-pane \; \
     send-keys -X select-word \; \
@@ -70,8 +74,8 @@ bind -n C-S-Right resize-pane -R 5
 set-option -g renumber-windows on
 
 ## Shift arrow to switch windows
-bind -n C-Tab next-window
-bind -n C-S-Tab previous-window
+bind -n C-Pagedown next-window
+bind -n C-Pageup previous-window
 
 # No delay for escape key press
 set -sg escape-time 0
@@ -87,28 +91,25 @@ bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # Allow for switching windows without initial ctrl+a/b
-bind-key -n C-1 select-window -t 1
-bind-key -n C-2 select-window -t 2
-bind-key -n C-3 select-window -t 3
-bind-key -n C-4 select-window -t 4
-bind-key -n C-5 select-window -t 5
-bind-key -n C-6 select-window -t 6
-bind-key -n C-7 select-window -t 7
-bind-key -n C-8 select-window -t 8
-bind-key -n C-9 select-window -t 9
+bind-key -n M-1 select-window -t 1
+bind-key -n M-2 select-window -t 2
+bind-key -n M-3 select-window -t 3
+bind-key -n M-4 select-window -t 4
+bind-key -n M-5 select-window -t 5
+bind-key -n M-6 select-window -t 6
+bind-key -n M-7 select-window -t 7
+bind-key -n M-8 select-window -t 8
+bind-key -n M-9 select-window -t 9
 
-# set inactive/active window styles
-set -g window-style 'fg=colour247,bg=colour236'
-set -g window-active-style 'fg=white,bg=black'
 
-# set the pane border colors 
+# set the pane border colours 
 set -g pane-border-fg magenta
 set -g pane-active-border-fg green
 set -g pane-active-border-bg default
 
 # Status Bar
 set -g status-fg white
-set -g status-bg colour232
+set -g status-bg "colour232"
 set -g window-status-activity-attr bold
 
 set -g status-left ' '
@@ -125,5 +126,14 @@ bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
 # Make tmuxinator work
 set -g base-index 1
 set-window-option -g pane-base-index 1
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
 
 
