--- a/.tmux.conf
+++ b/.tmux.conf
@@ -93,7 +93,7 @@ bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
 bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
 bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
-bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
+bind -n C-\\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # Allow for switching windows without initial ctrl+a/b
 bind-key -n M-1 select-window -t 1
@@ -110,24 +110,24 @@ bind-key -n M-9 select-window -t 9
 # Status Bar
 set -g status-fg white
 set -g status-bg "colour232"
-set -g window-status-activity-attr bold
+# set -g window-status-activity-attr bold
 set -g status-left ' '
 set -g window-status-format "#[fg=white,bg=colour235]  #I #W  "
 set -g window-status-current-format "#[fg=colour234,bg=white] #[fg=colour7,bg=colour243,noreverse,bold] #I #W #[fg=colour39,bg=colour234,nobold]"
 set -g status-right "#[fg=colour235,bg=colour252,bold] #S "
 
 # Windows style (Dim when not focused)
-set -g window-style 'fg=white,bg=colour234'
-set -g window-active-style 'fg=white,bg=colour232'
+#set -g window-style 'fg=white,bg=colour234'
+#set -g window-active-style 'fg=white,bg=colour232'
 
 # Add optional status bar
 setw -g pane-border-status bottom
 setw -g pane-border-format '(•ᴗ•)' #'#{pane_index} "#{pane_title}" #{pane_current_command}'
-setw -g pane-border-fg white
-setw -g pane-border-bg default
+# setw -g pane-border-fg white
+# setw -g pane-border-bg default
 # set the pane border colours 
-set -g pane-active-border-fg colour39
-set -g pane-active-border-bg default
+# set -g pane-active-border-fg colour39
+# set -g pane-active-border-bg default
 
 
 # Ensure Open works
@@ -150,6 +150,6 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g focus-events on
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run -b '~/.tmux/plugins/tpm/tpm'
+run '~/.tmux/plugins/tpm/tpm'
 
 
